--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "config/color";
 @import "config/font";
 @import "config/reset";
-@import "mixin/reset_form";
-@import "mixin/word-setting";
+@import "mixin/fix";
+@import "mixin/fav-setting";
 
 // スタイルシートの宣言
