--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,6 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
+    = link_to "ログイン", new_user_session_path
+    -# = link_to "ログアウト", destroy_user_session_path, method: :delete
     = yield
