comment out logout path

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,5 @@
     = javascript_include_tag 'application'
   %body
     = link_to "ログイン", new_user_session_path
-    -# = link_to "ログアウト", destroy_user_session_path, method: :delete
+    = link_to "ログアウト", destroy_user_session_path, method: :delete
     = yield
