--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,5 @@
     = link_to "ログイン", new_user_session_path
     = link_to "ログアウト", destroy_user_session_path, method: :delete
       = link_to "ログイン", new_user_session_path, class: "header__login" unless user_signed_in?
+      = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header__logout" if user_signed_in?
     = yield
