side-bar style in index

--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -6,3 +6,12 @@
   float: left;
 }
 
+.side-bar{
+  position: fixed;
+  padding-top: 70px;
+  background-color: $light-green;
+  width: 25%;
+  height: 100vh;
+  right: 0;
+  z-index: 0;
+}
