--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,19 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Vocab
+    %title voCab
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
+    %header.header
+      = image_tag "logo.png", class:"header__logo"
+      .header__title
+        voCab
+      - if user_signed_in?
+        .header__username
+          = current_user.nickname
+      = link_to "ログイン", new_user_session_path, class: "header__login" unless user_signed_in?
+      = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header__logout" if user_signed_in?
     = yield
