change color to main-color

--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,6 +1,6 @@
 .main{
   padding-top: 70px;
-  background-color: gray;
+  background-color: $main-color;
   width: 75%;
   height: 100vh;
   float: left;
