--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,7 @@
   %body
     %header.header
       = image_tag "logo.png", class:"header__logo"
-      .header__title
-        voCab
+      = link_to "voCab", root_path, class: "header__title"
       - if user_signed_in?
         .header__username
           = current_user.nickname
