--- a/app/views/wordbook/index.html.haml
+++ b/app/views/wordbook/index.html.haml
@@ -1,5 +1,5 @@
-.main
+.main.main--index
   .wordbooks
     = render partial: "wordbook",collection: @wordbooks
-.side-bar
-  voCabのサブ画面です
+.sideBar.sideBar--index
+  indexareaです
