create tmp new style

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -33,6 +33,12 @@
     margin: 0 10px;
     line-height: 70px;
   }
+  &__new{
+    @include reset_a-tag(gray);
+    float: right;
+    margin: 0 10px;
+    line-height: 70px;
+  }
 }
 
 .main{
