import config-number

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "config/color";
 @import "config/font";
 @import "config/reset";
+@import "config/number";
 @import "mixin/fix";
 @import "mixin/fav-setting";
 
