--- a/app/assets/stylesheets/wordbook/_index.scss
+++ b/app/assets/stylesheets/wordbook/_index.scss
@@ -61,6 +61,14 @@
         left: 50px;
         bottom: 0;
     }
+    &__destroy{
+      @include font-data(gray,20px,bold);
+      & a{
+        @include reset_a-tag(gray);
+      }
+      position: absolute;
+      left: 100px;
+      bottom: 0;
     }
   }
 }
