--- a/app/assets/stylesheets/wordbook/_index.scss
+++ b/app/assets/stylesheets/wordbook/_index.scss
@@ -17,7 +17,8 @@
       @include font-data(gray,12px,500);
       position: absolute;
       right: 0;
-      bottom: 0;
+      bottom: 15px;
+      margin-right: 5px;
     }
     &__user{
       @include font-data(gray,15px,500);
