add margin wordbook__tags

--- a/app/assets/stylesheets/wordbook/_index.scss
+++ b/app/assets/stylesheets/wordbook/_index.scss
@@ -38,7 +38,9 @@
       @include font-data(gray,12px,500);
       position: absolute;
       left: 0;
-      bottom:0;
+      top: 0;
+      margin-right: 5px;
+    }
     &__reference{
       @include font-data(gray,12px,500);
       position: absolute;
