--- a/app/views/wordbooks/_wordbook.html.haml
+++ b/app/views/wordbooks/_wordbook.html.haml
@@ -2,9 +2,9 @@
   .wordbook__title
     = link_to "#{wordbook.title}", wordbook_path(wordbook.id)
   .wordbook__viewed
-    = wordbook.viewed
+    = "閲覧数: #{wordbook.viewed}"
   .wordbook__user
-    = wordbook.user.nickname
+    = "作者: #{wordbook.user.nickname}"
   .wordbook__created-at
     = l(wordbook.created_at, format: :long)
   .wordbook__tags
