create wordcard__edit style

--- a/app/assets/stylesheets/wordbook/_show.scss
+++ b/app/assets/stylesheets/wordbook/_show.scss
@@ -5,6 +5,15 @@
   align-content: space-around;
   & .wordcard{
     @include wordbook;
+    &__edit{
+      @include font-data(gray,20px,bold);
+      & a{
+        @include reset_a-tag(gray);
+      }
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
     &__front{
       @include text-center(150px,center);
       @include font-data(black,30px,bold);
