create newWordBook__title style

--- a/app/assets/stylesheets/wordbook/_new.scss
+++ b/app/assets/stylesheets/wordbook/_new.scss
@@ -1,6 +1,13 @@
 .main--newWordBook{
   width: 50%;
   & .newWordBook{
+    &__title{
+      height: 100px;
+      width: 300px;
+      background-color: rgb(247, 133, 99);
+      box-shadow: 0 0 1px red;
+      margin: 10px;
+    }
   }
 }
 
