--- a/app/assets/stylesheets/wordbook/_new.scss
+++ b/app/assets/stylesheets/wordbook/_new.scss
@@ -15,6 +15,13 @@
       box-shadow: 0 0 1px red;
       margin: 10px;
     }
+    &__share{
+      height: 100px;
+      width: 300px;
+      background-color: rgb(247, 133, 99);
+      box-shadow: 0 0 1px red;
+      margin: 10px;
+    }
   }
 }
 
