--- a/app/assets/stylesheets/mixin/_fav-setting.scss
+++ b/app/assets/stylesheets/mixin/_fav-setting.scss
@@ -1,12 +1,12 @@
 // 高さを設定しテキストの中央寄せを行う
-@mixin text-center($height: auto,$align: unset){
+@mixin text_center($height: auto,$align: unset){
   height: $height;
   line-height: $height;
   text-align: $align;
 }
 
 // 文字の色、サイズ、太さを決定する
-@mixin font-data($color: black, $size: 15px, $weight: normal) {
+@mixin font_data($color: black, $size: 15px, $weight: normal) {
   color: $color;
   font-size: $size;
   font-weight: $weight;  
