--- a/app/assets/stylesheets/mixin/_fav-setting.scss
+++ b/app/assets/stylesheets/mixin/_fav-setting.scss
@@ -22,12 +22,11 @@
   min-height: $noted-height;
 }
 
-// 単語帳風のスタイル
-@mixin wordbook {
-  margin: 10px 0px;
-  height: 150px;
-  width: 400px;
-  background-color: $white;
-  box-shadow: 1px 1px 2px gray;
-  position: relative;
+// カード風のスタイル
+@mixin card_style($height: 150px, $width: 400px,$color: $white,$darken:80%,$margin-height: 10px, $margin-width: 10px){
+  height: $height;
+  width: $width;
+  background-color: $color;
+  box-shadow: 1px 1px 2px darken($color, $darken);
+  margin: $margin-height $margin-width;
 }
