--- a/app/assets/stylesheets/wordbook/_show.scss
+++ b/app/assets/stylesheets/wordbook/_show.scss
@@ -15,7 +15,7 @@
       bottom: 0;
     }
     &__destroy{
-      @include font-data(gray,20px,bold);
+      @include font_data(gray,20px,bold);
       & a{
         @include reset_a-tag(gray);
       }
@@ -24,15 +24,15 @@
       bottom: 0;
     }
     &__front{
-      @include text-center(150px,center);
-      @include font-data(black,30px,bold);
+      @include text_center(150px,center);
+      @include font_data(black,30px,bold);
     }
     &__reverse{
-      @include text-center(150px,center);
-      @include font-data(black,30px,bold);
+      @include text_center(150px,center);
+      @include font_data(black,30px,bold);
     }
     &__tag{
-      @include font-data(gray,10px,400);
+      @include font_data(gray,10px,400);
       position: absolute;
       right: 5px;
       bottom: 5px;
