--- a/app/assets/stylesheets/wordbook/_show.scss
+++ b/app/assets/stylesheets/wordbook/_show.scss
@@ -4,7 +4,8 @@
   justify-content: space-around;
   align-content: space-around;
   & .wordcard{
-    @include wordbook;
+    @include card_style;
+    position: relative;
     &__edit{
       @include font_data(gray,20px,bold);
       & a{
