--- a/app/views/wordbooks/edit.html.haml
+++ b/app/views/wordbooks/edit.html.haml
@@ -1,15 +1,4 @@
-.main.main--newWordBook
-  = form_for @wordbook,html:{class:"newWordBook"} do |f|
-    .newWordBook__title
-      = f.label :title, "単語帳の名前"
-      = f.text_field :title, value: @wordbook.title
-    .newWordBook__reference
-      = f.label :reference, "参照元"
-      = f.text_field :reference, value: @wordbook.reference
-    .newWordBook__share
-      = f.label :share, "公開：０、非公開：１"
-      = f.number_field :share, value: @wordbook.share
-    .newWordBook__submit
-      = f.submit
-.sideBar.sideBar--newWordBook
-  裏xz
+.main.main--editWordBook
+  = render partial: "inputform", locals:{wordbook: @wordbook}
+.sideBar.sideBar--editWordBook
+  裏
