--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,6 @@
 // スタイルシートの宣言
 @import "style";
 @import "wordbook/index";
+@import "wordbook/wordcard";
 @import "wordbook/inputform";
-@import "wordbook/show";
 @import "devise/devise";
