rename wordbook style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
 
 // スタイルシートの宣言
 @import "style";
-@import "wordbook/index";
+@import "wordbook/wordbook";
 @import "wordbook/wordcard";
 @import "wordbook/inputform";
 @import "devise/devise";
