--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,8 +12,7 @@
       = image_tag "logo.png", class:"header__logo"
       = link_to "voCab", root_path, class: "header__title"
       - if user_signed_in?
-        .header__username
-          = current_user.nickname
+        = link_to "#{current_user.nickname}", user_path(current_user.id), class: "header__username"
         = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header__logout"
         = link_to "新規作成", new_wordbook_path, class:"header__new"
       = link_to "ログイン", new_user_session_path, class: "header__login" unless user_signed_in?
