setting user reset_a-tag

--- a/app/assets/stylesheets/wordbook/_wordbook.scss
+++ b/app/assets/stylesheets/wordbook/_wordbook.scss
@@ -22,6 +22,9 @@
     }
     &__user{
       @include font_data(gray,15px,500);
+      & a{
+        @include reset_a-tag(gray);
+      }
       position: absolute;
       right: 0;
       top: 15px;
