rename class add  WordBook and WordCard

--- a/app/views/wordbooks/index.html.haml
+++ b/app/views/wordbooks/index.html.haml
@@ -1,5 +1,5 @@
-.main.main--index
+.main.main--indexWordBook
   .wordbooks
     = render partial: "wordbook",collection: @wordbooks
-.sideBar.sideBar--index
+.sideBar.sideBar--indexWordBook
   indexareaです
