--- a/app/views/wordbooks/show.html.haml
+++ b/app/views/wordbooks/show.html.haml
@@ -1,6 +1,6 @@
-.main.main--show
+.main.main--showWordBook
   .wordcards
     = render partial: "wordcard",collection: @wordbook.words, as: :word
 
-.sideBar.sideBar--show
+.sideBar.sideBar--showWordBook
   showのサイドバーです
