import user show style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,5 @@
 @import "wordbook/wordbook";
 @import "wordbook/wordcard";
 @import "wordbook/inputform";
+@import "user/show";
 @import "devise/devise";
