--- a/app/views/wordbooks/show.html.haml
+++ b/app/views/wordbooks/show.html.haml
@@ -3,4 +3,4 @@
     = render partial: "wordcard",collection: @wordbook.words, as: :word
 
 .sideBar.sideBar--showWordBook
-  showのサイドバーです
+  = link_to "このテストを受験する", wordbook_test_path(@wordbook.id, @wordbook.test.id) if @wordbook.test
