setting form and path

--- a/app/views/tests/show.html.haml
+++ b/app/views/tests/show.html.haml
@@ -1,5 +1,6 @@
 .main.main--showTest
   .testcards
+    = form_for [@wordbook,@test,@testresult] do |f|
         .testcard
           .testcard__top
           .testcard__flexbox
