--- a/app/views/tests/show.html.haml
+++ b/app/views/tests/show.html.haml
@@ -6,6 +6,9 @@
           .testcard__top
             = "[#{i+1}] #{question.word.front}"
           .testcard__flexbox
+            - question.testwords.order("RAND()").each.with_index do |testword,j|
               .testcard__flexbox__word{"data-id": i*10 + j}
+                = f.radio_button :id, testword.id, name:"testresult[testword_id][q#{testword.question.id}]"
+                = f.label :id, testword.word
 .sideBar.sideBar--showTest
   テストエリアですよ
