--- a/app/views/testresults/index.html.haml
+++ b/app/views/testresults/index.html.haml
@@ -1,8 +1,10 @@
-.main
+.main.main--indexTestresult
   .testresults
-  - @testresults.each.with_index do |testresult,i|
-    .testresult
-      = "テスト結果[#{i+1}] #{testresult.score} ％"
-      = l(testresult.created_at, format: :long)
-      = "取り組んだテスト: #{testresult.test.wordbook.title}"
+    - @testresults.each.with_index do |testresult,i|
+      .testresult
+        .testresult__score
+          = "テスト結果[#{i+1}] #{testresult.score} ％"
+        .testresult__time
+          = l(testresult.created_at, format: :long)
+        = link_to "取り組んだテスト: #{testresult.test.wordbook.title}", user_testresult_path(current_user.id,testresult.id), class:"testresult__title"
 .sideBar
