--- a/app/views/testresults/index.html.haml
+++ b/app/views/testresults/index.html.haml
@@ -1,4 +1,6 @@
 .main.main--indexTestresult
+  .wrapar
+    %canvas#myChart
 .sideBar.sideBar--indexTestresult
   .testresults
     - @testresults.each.with_index do |testresult,i|
