--- a/app/views/wordbooks/_wordbook.html.haml
+++ b/app/views/wordbooks/_wordbook.html.haml
@@ -1,6 +1,6 @@
 .wordbook
   .wordbook__title
-    = link_to "#{wordbook.title}", wordbook_path(wordbook.id)
+    = link_to "#{wordbook.title.truncate(15)}", wordbook_path(wordbook.id)
   .wordbook__viewed
     = "閲覧数: #{wordbook.viewed}"
   .wordbook__user
