--- a/app/assets/stylesheets/testresult/_index.scss
+++ b/app/assets/stylesheets/testresult/_index.scss
@@ -1,5 +1,39 @@
+.main--indexTestresult{
+  margin-top: 20px;
+  & .addChart__buttons{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    & .addChart__button{
+      height: 30px;
+      width: 200px;
+      text-align: center;
+      & button{
+        @include reset_form;
+        font-size:  20px;
+        line-height: 30px;
+      }
+      border: solid 2px gray;
+      margin: 0 5px;
+    }
+  }
+  width: 80%;
+  & .charts{
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    & .wrapar{
+      width: 48%;
+      height: 400px;
+    }
+  }
+}
+
 .sideBar--indexTestresult{
   overflow: scroll;
+  width: 20%;
   .testresults{
     display: flex;
     flex-flow: row wrap;
@@ -12,8 +46,4 @@
       @include card_style(80px,300px,white,50%);
     }
   }
-}
-
-.wrapar{
-  width: 600px;
 }
