--- a/app/assets/stylesheets/wordbook/_wordbook.scss
+++ b/app/assets/stylesheets/wordbook/_wordbook.scss
@@ -58,6 +58,18 @@
       bottom: 28px;
       margin-right: 5px;
     }
+    &__fav{
+      & button{
+        @include reset_form;
+        @include font_data(gray,10px);
+        & :hover{
+          color: black;
+        }
+      }
+      position: absolute;
+      left: 5px;
+      top: 5px;
+    }
     &__edit{
       @include font_data(gray,20px,bold);
       & a{
