--- a/app/assets/stylesheets/wordbook/_wordbook.scss
+++ b/app/assets/stylesheets/wordbook/_wordbook.scss
@@ -40,7 +40,7 @@
     &__tags{
       @include font_data(gray,12px,500);
       position: absolute;
-      left: 0;
+      left: 30px;
       top: 0;
       margin-right: 5px;
     }
