--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,12 +7,20 @@
         - else
           = "#{@user.nickname}のページ"
     .wordbooks
-      = render partial: "wordbooks/wordbook",collection: @user.wordbooks
+      - @user.wordbooks.each do |wordbook|
+        - if fav = wordbook.favorites.find_by(user_id: current_user.id)
+          = render partial: "wordbooks/wordbook",locals: { wordbook: wordbook, fav: fav, favorite_count: wordbook.favorites.length }
+        - else
+          = render partial: "wordbooks/wordbook",locals: { wordbook: wordbook, favorite_count: wordbook.favorites.length}
   .showUser
     .showUser__bar
       .showUser__bar__fav
         お気に入り一覧
     .wordbooks
-      ここにお気に入りのカード一覧が表示されます
+      - @favorites.each do |faved|
+        - if fav = faved.wordbook.favorites.find_by(user_id: current_user.id)
+          = render partial: "wordbooks/wordbook",locals: { wordbook: faved.wordbook, fav: fav, favorite_count: faved.wordbook.favorites.length }
+        - else
+          = render partial: "wordbooks/wordbook",locals: { wordbook: faved.wordbook, favorite_count: faved.wordbook.favorites.length}
 .sideBar.sideBar--showUser
   = link_to "過去のテスト結果", user_testresults_path(current_user.id) if user_signed_in? && current_user.id == @user.id
