--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -22,6 +22,8 @@
         = f.label :password_confirmation
         %br/
         = f.password_field :password_confirmation, autocomplete: "new-password"
+      .field
+        = recaptcha_tags callback: 'recaptchaCallbackFunction'
       .actions
         = f.submit "Sign up"
     = render "devise/shared/links"
