unmo用スタイルをimport

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "wordbook/show";
 @import "word/wordcard";
 @import "user/show";
+@import "user/unmo";
 @import "test/show";
 @import "testresult/show";
 @import "testresult/index";
