モノクロマティックの色を設定

--- a/app/assets/stylesheets/config/color.scss
+++ b/app/assets/stylesheets/config/color.scss
@@ -1,7 +1,8 @@
-$light-green: #b9f35b;
-$dark-blue: #1433969c;
-$dark-pink: #ee2ed4b0;
-$icon: black;
+$dark  : #091B4F;
+$light : #C0CAE8;
+$blue  : #1946CF;
+$black : #212D4F;
+$darty : #13369E;
 $white: #FFFFFF;
 $main-color: $white;
 $sub-color: gray;
